--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -17,7 +17,9 @@ spec:
           image: chiradev/boardgame:latest # Image that will be used to containers in the cluster
           imagePullPolicy: Always
           ports:
-            - containerPort: 8080 # The port that the container is running on in the cluster
+            - containerPort: 8080
+      imagePullSecrets:
+        - name: regcred                               # The port that the container is running on in the cluster
 
 
 ---
