--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: boardgame
-          image: chiradev/boardgame:latest # Image that will be used to containers in the cluster
+          image: chiradev/boardgame-app:latest # Image that will be used to containers in the cluster
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
